--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "ice-php/require-insensitivity":">=1.0.1"
+    "ice-php/functions":"*"
   },
   "minimum-stability": "dev",
   "autoload": {
