配置文件读取类

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "ice-php/config",
-  "description": "icePHP multi config",
+  "description": "icePHP框架的一部分,用来读取配置",
   "keywords": [
     "icePHP",
     "config"
