配置文件读取类

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
   },
   "minimum-stability": "dev",
   "autoload": {
+    "files": [
+      "src/functions.php"
+    ],
     "psr-4": {
       "icePHP\\": "src"
     }
